replace UUID by String in all code, improve caching

--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,8 @@
 = springboot-neo4j-caffeine
 
-Reference
+== TODO
+
+- Replace the name Meal by Dish (every where)
+
+== Reference
 https://graphaware.com/neo4j/2015/09/03/sdn-4-object-model.html
