--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,53 @@
 
 == Goal
 
+The goal of this project is to implement a simple application that handles restaurant. There are some endpoints to
+manage cities where the restaurants are, other to manage restaurants and, finally, some endpoints to handle the restaurant
+dishes. https://neo4j.com[Neo4j] was the chosen storage. We are using also https://github.com/ben-manes/caffeine[Caffeine]
+for caching.
+
 == Start Environment
+
+==== Docker Compose
+
+- Open one terminal
+
+- In `/springboot-neo4j-caffeine` root folder run
+----
+docker-compose up -d
+----
+
+[NOTE]
+====
+To stop and remove containers, networks, images, and volumes
+```
+docker-compose down -v
+```
+====
+
+- Wait a little bit to docker containers be up and healthy. To check it, run
+----
+docker-compose ps
+----
+
+==== Insert some cities, restaurants and dishes in Neo4j
+
+TODO
+
+== Start application using Maven
+
+In `/springboot-neo4j-caffeine` root folder run
+----
+mvn spring-boot:run
+----
+
+== Using application
+
+In order to interact with the application, you can access `Swagger` website: http://localhost:8080/swagger-ui.html
+
+== Neo4j
+
+You can access the UI of Neo4j running in the docker container at http://localhost:7474/browser
 
 == Bug
 
@@ -13,6 +59,8 @@ WARN ... o.s.d.n.mapping.Neo4jPersistentProperty : No identity field found for c
 It is a bug know by Spring Data Neo4j team: https://jira.spring.io/browse/DATAGRAPH-1076
 
 == TODO
+
+- Create a bash script that uses Neo4j API to insert some data.
 
 == Reference
 https://graphaware.com/neo4j/2015/09/03/sdn-4-object-model.html
