changes - change controller package to rest and add dto inside; - replace exceptionhandler; - rename some dtos.

--- a/README.adoc
+++ b/README.adoc
@@ -60,6 +60,8 @@ It is a bug know by Spring Data Neo4j team: https://jira.spring.io/browse/DATAGR
 
 == TODO
 
+- change controller package to rest and add dto inside;
+- replace exceptionhandler;
 - *Implement test cases*
 - Create a bash script that uses Neo4j API to insert some data.
 
