--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,6 @@
-= `springboot-neo4j-caffeine`
+= springboot-neo4j-caffeine
 
-The goal of this project is to implement a simple https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/[`Spring Boot`]
-Web Java application that handles restaurants and explore how caching works. The application has some endpoints to manage
-restaurants, cities (where the restaurants are located in) and dishes the restaurants have. We are using
-https://github.com/ben-manes/caffeine[`Caffeine`] for caching and https://neo4j.com[`Neo4j`] for storage.
+The goal of this project is to implement a simple https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/[`Spring Boot`] Web Java application that handles restaurants and explore how caching works. The application has some endpoints to manage  restaurants, cities (where the restaurants are located in) and dishes the restaurants have. We are using https://github.com/ben-manes/caffeine[`Caffeine`] for caching and https://neo4j.com[`Neo4j`] for storage.
 
 image::images/neo4j-ui.png[]
 
@@ -11,9 +8,7 @@ image::images/neo4j-ui.png[]
 
 The application uses 3 caches: `CITIES`, `RESTAURANTS` and `DISHES`.
 
-The caching is applied at controller level. For instance, if you call `GET /api/restaurants/123` for the first time,
-the application will check whether the key `123` is present in the `RESTAURANTS` cache; if not, it must go to DB to
-get the information about the restaurant (payload). Let's say that the payload is
+The caching is applied at controller level. For instance, if you call `GET /api/restaurants/123` for the first time, the application will check whether the key `123` is present in the `RESTAURANTS` cache; if not, it must go to DB to get the information about the restaurant (payload). Let's say that the payload is
 
 [source]
 ----
@@ -31,25 +26,27 @@ Before the endpoint finishes and returns the result, the key and its payload are
 }
 ----
 
-On subsequents calls to `GET /api/restaurants/123` (and as far as the data is not evicted), the application just needs
-to go to the cache and get the value.
+On subsequents calls to `GET /api/restaurants/123` (and as far as the data is not evicted), the application just needs to go to the cache and get the value.
 
-By the way, we have implemented more advanced caching logic as the one presented above. For example, imagine that you
-have a city cached in `CITIES` cache and a new restaurant is created in that city. In this case, the cache of the city
-is evicted of `CITIES` (because the list of restaurants in the city changed) and a new cache for the restaurant is put in
-`RESTAURANTS` cache. The same happens when a restaurant is deleted/update or a restaurant dish is added/deleted/updated.
+By the way, we have implemented more advanced caching logic as the one presented above. For example, imagine that you have a city cached in `CITIES` cache and a new restaurant is created in that city. In this case, the cache of the city is evicted of `CITIES` (because the list of restaurants in the city changed) and a new cache for the restaurant is put in `RESTAURANTS` cache. The same happens when a restaurant is deleted/update or a restaurant dish is added/deleted/updated.
+
+== Prerequisites
+
+* https://www.oracle.com/java/technologies/javase-jdk11-downloads.html[`Java 11+`]
+* https://www.docker.com/[`Docker`]
+* https://docs.docker.com/compose/install/[`Docker-Compose`]
 
 == Start Environment
 
-Open a terminal and, inside `springboot-neo4j-caffeine` root folder, run
-
+* Open a terminal and, inside `springboot-neo4j-caffeine` root folder, run
++
 [source]
 ----
 docker-compose up -d
 ----
 
-Wait a little bit to docker containers be up and healthy. To check it, run
-
+* Wait a little bit to docker containers be up and healthy. To check it, run
++
 [source]
 ----
 docker-compose ps
@@ -57,27 +54,29 @@ docker-compose ps
 
 == Start application using Maven
 
-In `springboot-neo4j-caffeine` root folder run
+* In a terminal, make sure you are inside `springboot-neo4j-caffeine` root folder
 
+* Run the following command
++
 [source]
 ----
-./mvnw spring-boot:run
+./mvnw clean spring-boot:run
 ----
 
-== Using application
+* In order to interact with the application, you can access `Swagger` website http://localhost:8080/swagger-ui.html
 
-In order to interact with the application, you can access `Swagger` website http://localhost:8080/swagger-ui.html
+== Useful Links
 
-== Neo4j
+* **Neo4j**
 
-You can access the UI of `Neo4j` running in the docker container at http://localhost:7474/browser
+  `Neo4j` UI can be accessed at http://localhost:7474/browser
 
 == Shutdown
 
-Go to `springboot-neo4j-caffeine` terminal and press `ctrl-c`
+* To stop `springboot-neo4j-caffeine`, go to its terminal and press `Ctrl+C`
 
-Then, to stop and remove containers, networks and volumes
-
+* To stop and remove docker-compose containers, networks and volumes, in a terminal and inside `springboot-neo4j-caffeine` root folder, run the following command
++
 [source]
 ----
 docker-compose down -v
@@ -85,18 +84,20 @@ docker-compose down -v
 
 == Running Test Cases
 
-Execute to command below to run some test cases
+* In a terminal, make sure you are inside `springboot-neo4j-caffeine` root folder
 
+* Execute to command below to run some test cases
++
 [source]
 ----
-./mvnw test
+./mvnw clean test
 ----
 
 == TODO
 
-- Add AOP to log whenever the endpoint is called;
-- Create a bash script that uses Neo4j API to insert some data.
+* Add AOP to log whenever the endpoint is called;
+* Create a bash script that uses Neo4j API to insert some data.
 
 == Reference
 
-https://graphaware.com/neo4j/2015/09/03/sdn-4-object-model.html
+* https://graphaware.com/neo4j/2015/09/03/sdn-4-object-model.html
