--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,14 @@
 = springboot-neo4j-caffeine
 
-The goal of this project is to implement a simple https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/[`Spring Boot`] Web Java application that handles restaurants and explore how caching works. The application has some endpoints to manage  restaurants, cities (where the restaurants are located in) and dishes the restaurants have. We are using https://github.com/ben-manes/caffeine[`Caffeine`] for caching and https://neo4j.com[`Neo4j`] for storage.
+The goal of this project is to explore how caching works. For it, we are going to implement a simple https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/[`Spring Boot`] application called `restaurant-api`. We are using https://github.com/ben-manes/caffeine[`Caffeine`] for caching and https://neo4j.com[`Neo4j`] for storage.
 
-image::images/neo4j-ui.png[]
+== Applications
+
+* **restaurant-api**
++
+`Spring Boot` Web Java application that has endpoints to manage restaurants, cities (where the restaurants are located in) and dishes that restaurants have. Data is stored in `Neo4j` and caching handled by `Caffeine`.
++
+image::images/restaurant-api-swagger.png[]
 
 == Caching
 
@@ -60,7 +66,7 @@ docker-compose ps
 +
 [source]
 ----
-./mvnw clean spring-boot:run
+./mvnw clean spring-boot:run --projects restaurant-api
 ----
 
 * In order to interact with the application, you can access `Swagger` website http://localhost:8080/swagger-ui.html
@@ -68,12 +74,14 @@ docker-compose ps
 == Useful Links
 
 * **Neo4j**
-
-  `Neo4j` UI can be accessed at http://localhost:7474/browser
++
+`Neo4j` UI can be accessed at http://localhost:7474/browser
++
+image::images/neo4j-ui.png[]
 
 == Shutdown
 
-* To stop `springboot-neo4j-caffeine`, go to its terminal and press `Ctrl+C`
+* To stop `restaurant-api`, go to the terminal where it's running and press `Ctrl+C`
 
 * To stop and remove docker-compose containers, networks and volumes, in a terminal and inside `springboot-neo4j-caffeine` root folder, run the following command
 +
