--- a/README.adoc
+++ b/README.adoc
@@ -51,7 +51,7 @@ By the way, we have implemented more advanced caching logic as the one presented
 docker-compose up -d
 ----
 
-* Wait a little bit to docker containers be up and healthy. To check it, run
+* Wait until `neo4j` docker container be up and healthy. To check it, run
 +
 [source]
 ----
@@ -69,7 +69,7 @@ docker-compose ps
 ./mvnw clean spring-boot:run --projects restaurant-api
 ----
 
-* In order to interact with the application, you can access `Swagger` website http://localhost:8080/swagger-ui.html
+* In order to interact with the application, you can access `Swagger` at http://localhost:8080/swagger-ui.html
 
 == Useful Links
 
@@ -108,4 +108,5 @@ docker-compose down -v
 
 == Reference
 
-* https://graphaware.com/neo4j/2015/09/03/sdn-4-object-model.html
+* https://github.com/spring-projects/spring-data-neo4j
+* https://neo4j.com/developer/spring-data-neo4j/
