--- a/README.adoc
+++ b/README.adoc
@@ -59,7 +59,7 @@ docker-compose up -d
 docker-compose ps
 ----
 
-== Start application using Maven
+== Running application using Maven
 
 * In a terminal, make sure you are inside `springboot-neo4j-caffeine` root folder
 
@@ -81,9 +81,58 @@ docker-compose ps
 |./mvnw clean spring-boot:run --projects restaurant-api -Dspring-boot.run.profiles=redis
 |===
 
-* In order to interact with the application, you can access `Swagger` at http://localhost:8080/swagger-ui.html
+== Running application as a Docker container
+
+* Build Docker Image
++
+[source]
+----
+./docker-build.sh
+----
+
+* Environment Variables
++
+|===
+|Environment Variable |Description
+
+|SPRING_PROFILES_ACTIVE
+|Specify the type of profile to run the application. To use `Redis` provider for caching set `redis`. To use `Caffeine` for caching set `caffeine`. The default profile will use `Simple` caching.
+
+|NEO4J_HOST
+|Specify host of the `Neo4j` to use (default `localhost`)
+
+|NEO4J_PORT
+|Specify port of the `Neo4j` to use (default `7687`)
+
+|REDIS_HOST
+|Specify host of the `Redis` to use (default `localhost`)
+
+|REDIS_PORT
+|Specify port of the `Redis` to use (default `6379`)
+|===
+
+* Run `restaurant-api` docker container, joining it to docker-compose network
++
+[source]
+----
+docker run -d --rm -p 8080:8080 --name restaurant-api \
+  --network=springboot-neo4j-caffeine_default \
+  --env NEO4J_HOST=neo4j --env REDIS_HOST=redis --env SPRING_PROFILES_ACTIVE=redis \
+  docker.mycompany.com/restaurant-api:1.0.0
+----
+
+== Applications URLs
+
+|===
+|Application |URL
+
+|restaurant-api
+|http://localhost:8080/swagger-ui.html
+|===
 
 == Simulation
+
+Open a terminal and run the following commands
 
 * Create a city
 +
@@ -128,7 +177,15 @@ image::images/redis-commander-ui.png[]
 
 == Shutdown
 
-* To stop `restaurant-api`, go to the terminal where it's running and press `Ctrl+C`
+* To stop `restaurant-api` application
++
+** If it was started with `Maven`, go to the terminal where it is running and press `Ctrl+C`
+** If it was started as a Docker container, run in a terminal the command below
++
+[source]
+----
+docker stop simple-service
+----
 
 * To stop and remove docker-compose containers, networks and volumes, in a terminal and inside `springboot-neo4j-caffeine` root folder, run the following command
 +
