project update - update spring-boot to 2.4.5; - update springdoc-openapi to 1.5.8; - update jib to 3.0.0; - update redis docker image to 6.2.2; - update neo4j docker image to 4.2.5; - add lombok-mapstruct-binding to maven-compiler-plugin annotationProcessorPaths; - fix spring-boot-maven-plugin native configuration by removing `-Dspring.native.remove-yaml-support=true` as yaml is needed; - update README.

--- a/README.adoc
+++ b/README.adoc
@@ -284,7 +284,7 @@ java -jar -agentlib:native-image-agent=config-output-dir=src/main/resources/META
 ...
 ----
 
-* If the missing configuration is NOT generated, the following exception is thrown while building the Docker native image
+* If the missing configuration for native image is NOT generated using the `native-image-agent`, the following exception is thrown while building the Docker native image
 +
 [source]
 ----
