--- a/README.adoc
+++ b/README.adoc
@@ -128,7 +128,7 @@ docker-compose ps
 docker run -d --rm -p 8080:8080 --name restaurant-api \
   --env NEO4J_HOST=neo4j --env REDIS_HOST=redis --env SPRING_PROFILES_ACTIVE=redis \
   --network=springboot-caching-neo4j_default \
-  docker.mycompany.com/restaurant-api:1.0.0
+  ivanfranchin/restaurant-api:1.0.0
 ----
 
 == Application URL
@@ -203,10 +203,10 @@ image::images/redis-commander-ui.png[]
 +
 [source]
 ----
-docker stop simple-service
+docker stop restaurant-api
 ----
 
-* To stop and remove docker-compose containers, networks and volumes, in a terminal and inside `springboot-caching-neo4j` root folder, run the following command
+* To stop and remove docker-compose containers, network and volumes, in a terminal and inside `springboot-caching-neo4j` root folder, run the following command
 +
 [source]
 ----
